--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,6 @@ button {
 .list {
   padding: 0;
   margin: 0;
-
   list-style: none;
 }
 
@@ -80,9 +79,20 @@ button {
   margin-left: auto;
   margin-right: auto;
 }
-*/
 
-/* header */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
 .header-line {
   display: flex;
@@ -118,22 +128,18 @@ button {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-
   color: inherit;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   transition: color 250ms var(--timing-function);
-
   position: relative;
 }
 
 .nav-link.current::after {
-  content: '';
-
+  content: "";
   position: absolute;
   bottom: 0;
-
   display: block;
   width: 100%;
   height: 4px;
@@ -164,7 +170,6 @@ button {
 .tel {
   padding-top: 32px;
   padding-bottom: 32px;
-
   color: var(--contacts-features-text-color);
   font-weight: 500;
   line-height: 1.14;
@@ -184,12 +189,9 @@ button {
   fill: currentColor;
 }
 
-/* Герой */
-
 .hero {
   padding-top: 200px;
   padding-bottom: 200px;
-
   background-color: var(--hero-bcg-color-footer);
   text-align: center;
 }
@@ -200,8 +202,7 @@ button {
   margin-left: auto;
   margin-right: auto;
   background-color: var(--hero-bcg-color-footer);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('../images/hero.jpg');
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -211,9 +212,7 @@ button {
   width: 696px;
   margin: 0 auto;
   margin-bottom: 30px;
-
   color: var(--hero-studio-footer-text-color);
-
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -224,7 +223,6 @@ button {
 .hero-btn {
   padding: 10px 32px;
   margin: 0 auto;
-
   background-color: var(--acctnt-color);
   color: var(--hero-studio-footer-text-color);
   font-family: inherit;
@@ -238,22 +236,6 @@ button {
 .hero-btn:hover,
 .hero-btn:focus {
   background-color: var(--hero-button-active);
-}
-
-/* Наші переваги */
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
 }
 
 .features-list {
@@ -274,7 +256,6 @@ button {
 
 .features-title {
   margin-bottom: 10px;
-
   font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
@@ -286,15 +267,12 @@ button {
   line-height: 1.71;
 }
 
-/* Чим ми займаємося*/
-
 .work {
   padding-top: 0;
 }
 
 .title {
   margin-bottom: 50px;
-
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -313,7 +291,6 @@ button {
 .work-list-text {
   position: absolute;
   bottom: 0;
-
   width: 370px;
   height: 70px;
   color: var(--hero-studio-footer-text-color);
@@ -326,8 +303,6 @@ button {
   justify-content: center;
 }
 
-/* Команда */
-
 .team {
   background-color: var(--team-bcg-color);
 }
@@ -336,9 +311,9 @@ button {
   display: flex;
   gap: 30px;
 }
+
 .team-card {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: var(--hero-studio-footer-text-color);
 }
@@ -349,7 +324,6 @@ button {
 
 .team-name {
   margin-bottom: 10px;
-
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -358,7 +332,6 @@ button {
 
 .team-job {
   margin-bottom: 16px;
-
   color: var(--contacts-features-text-color);
   font-size: 16px;
   line-height: 1.19;
@@ -397,8 +370,6 @@ button {
   color: var(--hero-studio-footer-text-color);
 }
 
-/* ---------НАШІ КЛІЄНТИ--------- */
-
 .clients-list {
   display: flex;
   gap: 30px;
@@ -408,6 +379,7 @@ button {
   width: calc((100% - 150px) / 6);
   height: 92px;
 }
+
 .clients-link {
   width: 100%;
   height: 100%;
@@ -429,12 +401,9 @@ button {
   color: var(--acctnt-color);
 }
 
-/* Footer */
-
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
-
   background-color: var(--hero-bcg-color-footer);
 }
 
@@ -450,7 +419,6 @@ button {
 
 .logo-studiofooter {
   color: var(--hero-studio-footer-text-color);
-
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -463,7 +431,6 @@ button {
 
 .google {
   display: inline-block;
-
   color: var(--hero-studio-footer-text-color);
   line-height: 1.71;
   transition: color 250ms var(--timing-function);
@@ -472,7 +439,6 @@ button {
 .mail-address,
 .tel-address {
   display: inline-block;
-
   color: var(--footer-contacts-color);
   line-height: 1.71;
   transition: color 250ms var(--timing-function);
@@ -541,12 +507,10 @@ button {
   height: 50px;
   padding: 15px 16px;
   margin-right: 12px;
-
   border: 1px solid var(--border-input-footer);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: transparent;
-
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
@@ -556,7 +520,6 @@ button {
 .button-subscribe {
   display: flex;
   padding: 10px 32px;
-
   background-color: var(--acctnt-color);
   color: var(--hero-studio-footer-text-color);
   font-family: inherit;
@@ -571,8 +534,6 @@ button {
   fill: currentColor;
 }
 
----------------------------/* ПОРТФОЛІО */----------------
-
 .header-border {
   border-bottom: 1px solid var(--border);
 }
@@ -585,17 +546,8 @@ button {
   margin-bottom: 50px;
 }
 
-.button-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 8px;
-  justify-content: center;
-  margin-bottom: 50px;
-}
-
 .button {
   padding: 6px 22px;
-
   background-color: var(--team-bcg-color);
   color: inherit;
   font-family: inherit;
@@ -603,8 +555,7 @@ button {
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: inherit;
-  transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function),
-    box-shadow 250ms var(--timing-function);
+  transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function), box-shadow 250ms var(--timing-function);
 }
 
 .button.current,
@@ -612,8 +563,7 @@ button {
 .button:focus {
   background-color: var(--acctnt-color);
   color: var(--hero-studio-footer-text-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .working-list {
@@ -633,8 +583,7 @@ button {
 
 .gallery-link:hover,
 .gallery-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .gallery-top-wrap {
@@ -644,7 +593,6 @@ button {
 
 .gallery-top-text {
   position: absolute;
-
   top: 0;
   padding: 63px 24px;
   color: var(--hero-studio-footer-text-color);
@@ -671,7 +619,6 @@ button {
 
 .name-work {
   margin-bottom: 4px;
-
   color: var(--title-black-color);
   font-weight: 700;
   font-size: 18px;
@@ -690,7 +637,6 @@ button {
 .backdrop {
   position: fixed;
   top: 0;
-
   width: 100%;
   height: 100%;
   background-color: var(--backdrop);
@@ -703,12 +649,10 @@ button {
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 40px;
-
   width: 528px;
   height: 581px;
   background-color: var(--hero-studio-footer-text-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%) scaleX(1);
   transition: transform 250ms var(--timing-function);
@@ -718,7 +662,6 @@ button {
   position: absolute;
   top: 8px;
   right: 8px;
-
   width: 30px;
   height: 30px;
   background-color: transparent;
@@ -749,9 +692,7 @@ button {
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
-
   color: var(--title-black-color);
-
   margin-bottom: 12px;
 }
 
@@ -762,14 +703,12 @@ button {
 .input-label {
   display: block;
   margin-bottom: 4px;
-
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
-
   color: var(--contacts-features-text-color);
 }
 
@@ -821,11 +760,24 @@ button {
   transition: border-color 250ms var(--timing-function);
 }
 
+.modal-comment::-moz-placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--placeholder-color);
+}
+
+.modal-comment:-ms-input-placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--placeholder-color);
+}
+
 .modal-comment::placeholder {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
-
   color: var(--placeholder-color);
 }
 
@@ -848,8 +800,7 @@ button {
   align-items: center;
   justify-content: center;
   fill: transparent;
-  transition: background-color 250ms var(--timing-function), fill 250ms var(--timing-function),
-    border-color 250ms var(--timing-function);
+  transition: background-color 250ms var(--timing-function), fill 250ms var(--timing-function), border-color 250ms var(--timing-function);
 }
 
 .checkbox-input:checked + .checkbox-text span {
@@ -871,7 +822,6 @@ button {
   padding: 10px 32px;
   margin: 0 auto;
   margin-top: 30px;
-
   background-color: var(--acctnt-color);
   color: var(--hero-studio-footer-text-color);
   font-family: inherit;
@@ -879,4 +829,4 @@ button {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-}
+}/*# sourceMappingURL=main.css.map */
