--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -7,6 +7,7 @@
   width: calc((100% - 150px) / 6);
   height: 92px;
 }
+
 .clients-link {
   width: 100%;
   height: 100%;
@@ -17,13 +18,12 @@
   justify-content: center;
   color: var(--soc-color);
   transition: color 250ms var(--timing-function);
+  &:hover,
+  &:focus {
+    color: var(--acctnt-color);
+  }
 }
 
 .clients-icon {
   fill: currentColor;
-}
-
-.clients-link:hover,
-.clients-link:focus {
-  color: var(--acctnt-color);
 }
