--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -38,40 +38,31 @@
   line-height: 1.14;
   letter-spacing: 0.02em;
   transition: color 250ms var(--timing-function);
-
   position: relative;
-}
+  &.current::after {
+    content: '';
 
-.nav-link.current::after {
-  content: '';
+    position: absolute;
+    bottom: 0;
 
-  position: absolute;
-  bottom: 0;
-
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--acctnt-color);
-  border-radius: 2px;
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--acctnt-color);
+    border-radius: 2px;
+  }
+  &:hover,
+  &:focus {
+    color: var(--acctnt-color);
+  }
 }
 
 .contacts {
   display: flex;
   margin-left: auto;
-}
-
-.contacts .item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.nav-link:hover,
-.nav-link:focus,
-.current,
-.mail:hover,
-.mail:focus,
-.tel:hover,
-.tel:focus {
-  color: var(--acctnt-color);
+  & .item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .mail,
@@ -86,6 +77,10 @@
   display: flex;
   align-items: center;
   transition: color 250ms var(--timing-function);
+  &:hover,
+  &:focus {
+    color: var(--acctnt-color);
+  }
 }
 
 .mail-icon {
