--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -22,15 +22,14 @@
   letter-spacing: inherit;
   transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function),
     box-shadow 250ms var(--timing-function);
-}
-
-.button.current,
-.button:hover,
-.button:focus {
-  background-color: var(--acctnt-color);
-  color: var(--hero-studio-footer-text-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  &.current,
+  &:hover,
+  &:focus {
+    background-color: var(--acctnt-color);
+    color: var(--hero-studio-footer-text-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
 
 .working-list {
@@ -46,12 +45,11 @@
 .gallery-link {
   display: block;
   transition: box-shadow 250ms var(--timing-function);
-}
-
-.gallery-link:hover,
-.gallery-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .gallery-top-wrap {
@@ -72,11 +70,10 @@
   height: 100%;
   transform: translateY(100%);
   transition: transform 250ms var(--timing-function);
-}
-
-.gallery-link:hover .gallery-top-text,
-.gallery-link:focus .gallery-top-text {
-  transform: translateY(0);
+  .gallery-link:hover &,
+  .gallery-link:focus & {
+    transform: translateY(0);
+  }
 }
 
 .projects {
