--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -6,6 +6,7 @@
   display: flex;
   gap: 30px;
 }
+
 .team-card {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -55,14 +56,13 @@
   justify-content: center;
   color: var(--soc-color);
   transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function);
+  &:hover,
+  &:focus {
+    background-color: var(--acctnt-color);
+    color: var(--hero-studio-footer-text-color);
+  }
 }
 
 .team-soc-icon {
   fill: currentColor;
-}
-
-.team-soc-link:hover,
-.team-soc-link:focus {
-  background-color: var(--acctnt-color);
-  color: var(--hero-studio-footer-text-color);
 }
