--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -19,7 +19,7 @@
   background-size: cover;
 }
 
-.hero-title {
+.hero__title {
   width: 696px;
   margin: 0 auto;
   margin-bottom: 30px;
@@ -33,7 +33,7 @@
   text-transform: uppercase;
 }
 
-.hero-btn {
+.hero__btn {
   padding: 10px 32px;
   margin: 0 auto;
 
