--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import './base/container';
 @import './utils/hidden';
 @import './utils/current';
+@import './utils/title';
 
 @import './components/header';
 @import './components/hero';
