--- a/css/main.css
+++ b/css/main.css
@@ -98,12 +98,20 @@ button {
   color: var(--acctnt-color);
 }
 
-.header-line {
+.title {
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+
+.header__container {
   display: flex;
   align-items: center;
 }
 
-.logo {
+.logo-link__web {
   color: var(--acctnt-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -111,7 +119,7 @@ button {
   line-height: 1.19;
 }
 
-.logo-studioheader {
+.logo-link__studio {
   color: var(--logo-studio-header-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -119,16 +127,16 @@ button {
   line-height: 1.19;
 }
 
-.nav-site {
+.header__navigation {
   margin-left: 93px;
 }
 
-.nav-list {
+.navigation__menu {
   display: flex;
   gap: 50px;
 }
 
-.nav-link {
+.menu__link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -139,7 +147,7 @@ button {
   transition: color 250ms var(--timing-function);
   position: relative;
 }
-.nav-link.current::after {
+.menu__link.current::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -149,20 +157,19 @@ button {
   background-color: var(--acctnt-color);
   border-radius: 2px;
 }
-.nav-link:hover, .nav-link:focus {
+.menu__link:hover, .menu__link:focus {
   color: var(--acctnt-color);
 }
 
-.contacts {
+.header__contacts {
   display: flex;
   margin-left: auto;
 }
-.contacts .item:not(:last-child) {
+.header__contacts .contacts__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.mail,
-.tel {
+.contacts__link {
   padding-top: 32px;
   padding-bottom: 32px;
   color: var(--contacts-features-text-color);
@@ -173,18 +180,11 @@ button {
   align-items: center;
   transition: color 250ms var(--timing-function);
 }
-.mail:hover, .mail:focus,
-.tel:hover,
-.tel:focus {
+.contacts__link:hover, .contacts__link:focus {
   color: var(--acctnt-color);
 }
 
-.mail-icon {
-  margin-right: 10px;
-  fill: currentColor;
-}
-
-.tel-icon {
+.contacts__icon {
   margin-right: 10px;
   fill: currentColor;
 }
@@ -208,7 +208,7 @@ button {
   background-size: cover;
 }
 
-.hero-title {
+.hero__title {
   width: 696px;
   margin: 0 auto;
   margin-bottom: 30px;
@@ -220,7 +220,7 @@ button {
   text-transform: uppercase;
 }
 
-.hero-btn {
+.hero__btn {
   padding: 10px 32px;
   margin: 0 auto;
   background-color: var(--acctnt-color);
@@ -232,16 +232,16 @@ button {
   letter-spacing: 0.06em;
   transition: background-color 250ms var(--timing-function);
 }
-.hero-btn:hover, .hero-btn:focus {
+.hero__btn:hover, .hero__btn:focus {
   background-color: var(--hero-button-active);
 }
 
-.features-list {
+.features__list {
   display: flex;
   gap: 30px;
 }
 
-.features-box {
+.features__wrap {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -252,7 +252,7 @@ button {
   background-color: var(--team-bcg-color);
 }
 
-.features-title {
+.features__title {
   margin-bottom: 10px;
   font-size: 14px;
   font-weight: 700;
@@ -260,7 +260,7 @@ button {
   text-transform: uppercase;
 }
 
-.features-text {
+.features__text {
   color: var(--contacts-features-text-color);
   line-height: 1.71;
 }
@@ -269,24 +269,16 @@ button {
   padding-top: 0;
 }
 
-.title {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-}
-
-.work-list {
+.work__list {
   display: flex;
   gap: 30px;
 }
 
-.work-item {
+.work__item {
   position: relative;
 }
 
-.work-list-text {
+.work__text {
   position: absolute;
   bottom: 0;
   width: 370px;
@@ -305,22 +297,22 @@ button {
   background-color: var(--team-bcg-color);
 }
 
-.team-list {
+.team__list {
   display: flex;
   gap: 30px;
 }
 
-.team-card {
+.team__card {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: var(--hero-studio-footer-text-color);
 }
 
-.card {
+.team__wrap {
   padding: 30px 0;
 }
 
-.team-name {
+.team__name {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
@@ -328,7 +320,7 @@ button {
   text-align: center;
 }
 
-.team-job {
+.team__job {
   margin-bottom: 16px;
   color: var(--contacts-features-text-color);
   font-size: 16px;
@@ -336,18 +328,18 @@ button {
   text-align: center;
 }
 
-.team-soc-list {
+.team__soc-list {
   display: flex;
   justify-content: center;
   gap: 10px;
 }
 
-.team-soc-item {
+.team__soc-item {
   width: 44px;
   height: 44px;
 }
 
-.team-soc-link {
+.team__soc-link {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -357,26 +349,26 @@ button {
   color: var(--soc-color);
   transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function);
 }
-.team-soc-link:hover, .team-soc-link:focus {
+.team__soc-link:hover, .team__soc-link:focus {
   background-color: var(--acctnt-color);
   color: var(--hero-studio-footer-text-color);
 }
 
-.team-soc-icon {
+.team__soc-icon {
   fill: currentColor;
 }
 
-.clients-list {
+.clients__list {
   display: flex;
   gap: 30px;
 }
 
-.clients-item {
+.clients__item {
   width: calc((100% - 150px) / 6);
   height: 92px;
 }
 
-.clients-link {
+.clients__link {
   width: 100%;
   height: 100%;
   border: 1px solid currentColor;
@@ -387,11 +379,11 @@ button {
   color: var(--soc-color);
   transition: color 250ms var(--timing-function);
 }
-.clients-link:hover, .clients-link:focus {
+.clients__link:hover, .clients__link:focus {
   color: var(--acctnt-color);
 }
 
-.clients-icon {
+.clients__icon {
   fill: currentColor;
 }
 
@@ -401,17 +393,17 @@ button {
   background-color: var(--hero-bcg-color-footer);
 }
 
-.footer-cotainer {
+.footer__container {
   display: flex;
   align-items: baseline;
 }
 
-.footer-logo {
+.footer__logo-link {
   display: inline-block;
   margin-bottom: 20px;
 }
 
-.logo-studiofooter {
+.logo-link__studiofooter {
   color: var(--hero-studio-footer-text-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -419,39 +411,36 @@ button {
   line-height: 1.19;
 }
 
-.address-item:not(:last-child) {
+.address__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.google {
+.address__google-link {
   display: inline-block;
   color: var(--hero-studio-footer-text-color);
   line-height: 1.71;
   transition: color 250ms var(--timing-function);
 }
-.google:hover, .google:focus {
+.address__google-link:hover, .address__google-link:focus {
   color: var(--acctnt-color);
 }
 
-.mail-address,
-.tel-address {
+.address__link {
   display: inline-block;
   color: var(--footer-contacts-color);
   line-height: 1.71;
   transition: color 250ms var(--timing-function);
 }
-.mail-address:hover, .mail-address:focus,
-.tel-address:hover,
-.tel-address:focus {
+.address__link:hover, .address__link:focus {
   color: var(--acctnt-color);
 }
 
-.subscribe-wrap {
+.footer__subscribe {
   margin-left: 70px;
   margin-right: auto;
 }
 
-.subscribe {
+.subscribe__title {
   color: var(--hero-studio-footer-text-color);
   font-weight: 700;
   line-height: 1.14;
@@ -459,18 +448,18 @@ button {
   margin-bottom: 20px;
 }
 
-.footer-soc-list {
+.subscribe__soc-list {
   display: flex;
   justify-content: center;
   gap: 10px;
 }
 
-.footer-soc-item {
+.subscribe__soc-item {
   width: 44px;
   height: 44px;
 }
 
-.footer-soc-link {
+.subscribe__soc-link {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -481,19 +470,19 @@ button {
   color: var(--hero-studio-footer-text-color);
   transition: background-color 250ms var(--timing-function);
 }
-.footer-soc-link:hover, .footer-soc-link:focus {
+.subscribe__soc-link:hover, .subscribe__soc-link:focus {
   background-color: var(--acctnt-color);
 }
 
-.footer-soc-icon {
+.subscribe__soc-icon {
   fill: currentColor;
 }
 
-.send-wrap {
+.subscribe__form {
   display: flex;
 }
 
-.input-footer {
+.subscribe__input {
   width: 358px;
   height: 50px;
   padding: 15px 16px;
@@ -508,7 +497,7 @@ button {
   color: var(--footer-contacts-color);
 }
 
-.button-subscribe {
+.subscribe__button {
   display: flex;
   padding: 10px 32px;
   background-color: var(--acctnt-color);
@@ -520,12 +509,12 @@ button {
   letter-spacing: 0.06em;
 }
 
-.send-icon {
+.subscribe__icon {
   margin-left: 10px;
   fill: currentColor;
 }
 
-.header-border {
+.header__border {
   border-bottom: 1px solid var(--border);
 }
 
