--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -5,17 +5,17 @@
   background-color: var(--hero-bcg-color-footer);
 }
 
-.footer-cotainer {
+.footer__container {
   display: flex;
   align-items: baseline;
 }
 
-.footer-logo {
+.footer__logo-link {
   display: inline-block;
   margin-bottom: 20px;
 }
 
-.logo-studiofooter {
+.logo-link__studiofooter {
   color: var(--hero-studio-footer-text-color);
 
   font-family: Raleway, sans-serif;
@@ -24,11 +24,11 @@
   line-height: 1.19;
 }
 
-.address-item:not(:last-child) {
+.address__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.google {
+.address__google-link {
   display: inline-block;
 
   color: var(--hero-studio-footer-text-color);
@@ -40,8 +40,7 @@
   }
 }
 
-.mail-address,
-.tel-address {
+.address__link {
   display: inline-block;
 
   color: var(--footer-contacts-color);
@@ -53,12 +52,12 @@
   }
 }
 
-.subscribe-wrap {
+.footer__subscribe {
   margin-left: 70px;
   margin-right: auto;
 }
 
-.subscribe {
+.subscribe__title {
   color: var(--hero-studio-footer-text-color);
   font-weight: 700;
   line-height: 1.14;
@@ -66,18 +65,18 @@
   margin-bottom: 20px;
 }
 
-.footer-soc-list {
+.subscribe__soc-list {
   display: flex;
   justify-content: center;
   gap: 10px;
 }
 
-.footer-soc-item {
+.subscribe__soc-item {
   width: 44px;
   height: 44px;
 }
 
-.footer-soc-link {
+.subscribe__soc-link {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -93,15 +92,15 @@
   }
 }
 
-.footer-soc-icon {
+.subscribe__soc-icon {
   fill: currentColor;
 }
 
-.send-wrap {
+.subscribe__form {
   display: flex;
 }
 
-.input-footer {
+.subscribe__input {
   width: 358px;
   height: 50px;
   padding: 15px 16px;
@@ -118,7 +117,7 @@
   color: var(--footer-contacts-color);
 }
 
-.button-subscribe {
+.subscribe__button {
   display: flex;
   padding: 10px 32px;
 
@@ -131,7 +130,7 @@
   letter-spacing: 0.06em;
 }
 
-.send-icon {
+.subscribe__icon {
   margin-left: 10px;
   fill: currentColor;
 }
