--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -2,23 +2,23 @@
   background-color: var(--team-bcg-color);
 }
 
-.team-list {
+.team__list {
   display: flex;
   gap: 30px;
 }
 
-.team-card {
+.team__card {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: var(--hero-studio-footer-text-color);
 }
 
-.card {
+.team__wrap {
   padding: 30px 0;
 }
 
-.team-name {
+.team__name {
   margin-bottom: 10px;
 
   font-weight: 500;
@@ -27,7 +27,7 @@
   text-align: center;
 }
 
-.team-job {
+.team__job {
   margin-bottom: 16px;
 
   color: var(--contacts-features-text-color);
@@ -36,18 +36,18 @@
   text-align: center;
 }
 
-.team-soc-list {
+.team__soc-list {
   display: flex;
   justify-content: center;
   gap: 10px;
 }
 
-.team-soc-item {
+.team__soc-item {
   width: 44px;
   height: 44px;
 }
 
-.team-soc-link {
+.team__soc-link {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -63,6 +63,6 @@
   }
 }
 
-.team-soc-icon {
+.team__soc-icon {
   fill: currentColor;
 }
